Changelog
=========

1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2011-07-11)
------------------

- Fix broken egg 
  [gotcha]


1.0.1 (2011-07-09)
------------------

- Eggified 
  [gotcha]

1.0 (2008-04-18)
----------------

- First release (as .tgz)
  [sivachandran]